[package]
name = "exe"
description = "A PE (Portable Executable) library!"
repository = "https://github.com/frank2/exe-rs"
version = "0.2.1"
authors = ["frank2@dc949.org"]
edition = "2018"
license = "GPL-3.0"
keywords = ["pe", "exe"]
readme = "README.md"
exclude = ["test/*.exe", "test/*.dll", "test/*.sys"]
documentation = "https://docs.rs/exe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
byteorder = "1.1.0"
chrono = "0.4"
widestring = "0.4.3"
