[package]
name = "exe"
description = "A PE (Portable Executable) library!"
repository = "https://github.com/frank2/exe-rs"
version = "0.4.1"
authors = ["frank2@dc949.org"]
edition = "2018"
license = "GPL-3.0"
keywords = ["pe", "exe"]
readme = "README.md"
exclude = ["test/*.exe", "test/*.dll", "test/*.sys", "test/*.bin"]
documentation = "https://docs.rs/exe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
byteorder = "1.1.0"
chrono = "0.4"
md-5 = "0.9.1"
sha-1 = "0.9.6"
sha2 = "0.9.5"
widestring = "0.4.3"

[dev-dependencies]
hex = "0.4.3"

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi"] }
